--- a/placement.tex
+++ b/placement.tex
@@ -1,5 +1,5 @@
 \chapter{Placement}
-The algorithm for the placement, a deterministic analog circuit placement algorithm using hierarchically bounded enumeration and enhanced shape functions \cite{iccad:plantage}, was mainly developed and implemented by Martin Strasser during his doctoral thesis as well as by Michael Eick during his diploma thesis. The main idea behind it is that circuits typically have a certain hierarchy. For example, an operation amplifier \nref{fig:miller_amplifier_schematic} consists of a differential amplifier, a current mirror and an output amplifier. Usually it is a good idea to place the modules of the same group not too far away because they belong together in the functionality of the circuit. This is also the typical way a designer creates a layout out of a circuit manually. The designer starts with a certain functionality and places the modules for this function close to each other. If the modules are grouped together in the layout \nref{fig:miller_amplifier_layout}, they do not see that large differences in, for example, temperature of the substrate. This will result in a better performance of the circuit.
+The algorithm for the placement, a deterministic analog circuit placement algorithm using hierarchically bounded enumeration and enhanced shape functions \cite{iccad:plantage}, was mainly developed and implemented by Martin Strasser during his doctoral thesis as well as by Michael Eick during his diploma thesis. The main idea behind it is that circuits typically have a certain hierarchy. For example, an operation amplifier \figref{fig:miller_amplifier_schematic} consists of a differential amplifier, a current mirror and an output amplifier. Usually it is a good idea to place the modules of the same group not too far away because they belong together in the functionality of the circuit. This is also the typical way a designer creates a layout out of a circuit manually. The designer starts with a certain functionality and places the modules for this function close to each other. If the modules are grouped together in the layout \figref{fig:miller_amplifier_layout}, they do not see that large differences in, for example, temperature of the substrate. This will result in a better performance of the circuit.
 At the moment, this information on the groups must be fed in by the user but the target for the future would be that even this step can be automatized by, for instance, a circuit analysis. Consequently, the information can be used to find the best placements for these groups, which are then combined on the next level in the hierarchy.
 
 \begin{figure}
