--- a/routing.tex
+++ b/routing.tex
@@ -2,7 +2,7 @@
 
 Even nowadays the routing is often done manually for analog circuits. This is mainly caused by a lack of good tools and, consequently, the missing trust of engineers in them. The engineers consider a lot of different constraints during the routing, for example symmetries, net lengths and capacitive couplings. All these things have a major impact on the performance of the circuit, as it is very important in the analog world to have an accurate signal level because a division into high or low is not enough.
 
-Additionally, the designer adds guards and rings to the placement to protect certain devices from noise. This noise can come, for instance, from the clock net or other routes, which carry a signal with high frequency. But high frequencies are not the only disturbing effects: During the placement, the designer has to consider temperature gradients, caused by transistors with a high power consumption. To avoid problems with different temperatures in the substrate of, for example, the devices of a differential pair they can be placed symmetrically or can even have a common centroid. Around these grouped modules the designer then can create a guard ring to protect the devices even more. An example for a manually routed layout can be seen in \nref{fig:miller_amplifier_routed_layout}.
+Additionally, the designer adds guards and rings to the placement to protect certain devices from noise. This noise can come, for instance, from the clock net or other routes, which carry a signal with high frequency. But high frequencies are not the only disturbing effects: During the placement, the designer has to consider temperature gradients, caused by transistors with a high power consumption. To avoid problems with different temperatures in the substrate of, for example, the devices of a differential pair they can be placed symmetrically or can even have a common centroid. Around these grouped modules the designer then can create a guard ring to protect the devices even more. An example for a manually routed layout can be seen in \figref{fig:miller_amplifier_routed_layout}.
 
 So for an automatic routing algorithm a lot of different constraints must be considered. There are even more obstacles than just the devices and already created routes, for instance, the routes should pass over guard rings. To solve this problem in the following chapter two different approaches are presented: one simple sequentially line expansion router and one extended version of the previous one, which considers additional constraints. But first I will discuss the changes that were necessary for the implementation of the routing algorithms.
 
@@ -30,7 +30,7 @@ In awareness of the necessary routing for every module a bigger area was defined
 
 The technology rules are passed through by the ICFBInterface to Plantage. At least for the technology definitions of Austria Microsystems it is not necessary to convert these rules, as the same format is chosen. For other manufacturers a conversion might be necessary.
 
-Previously, the vias and routes were not considered at all. The main information which is needed to route are the dimension of the vias on the different layers and the width for the routes. Actually, there is no real width for a route, but a minimal width, which a route must have. Usually this width is used for the connections. Also, the dimensions for the via must be calculated \nref{eq:via_dimension}, while the generated routes and placed vias needed to be added to the output of Plantage, so that they can be shown in the GUI.
+Previously, the vias and routes were not considered at all. The main information which is needed to route are the dimension of the vias on the different layers and the width for the routes. Actually, there is no real width for a route, but a minimal width, which a route must have. Usually this width is used for the connections. Also, the dimensions for the via must be calculated \neweqref{eq:via_dimension}, while the generated routes and placed vias needed to be added to the output of Plantage, so that they can be shown in the GUI.
 
 Beforehand, every pin consisted only of one rectangle, which is obviously not enough. This basic information was used to minimize the estimated net length for the placements. For real routing more complex possibilities need to define pins, as for example, the gate can be connected from both sides. Moreover, it is not recommended to contact it over the diffusion area. This will result in even more complex contact areas, as they could be split up in different parts. The definition of these areas is done by the user in the GUI and handed over to Plantage. The used format defines for every pin, which is part of a module, at least one contact area, but eventually a lot more. During the routing the actual contact area is then selected based on a certain heuristic.
 
@@ -53,7 +53,7 @@ These algorithms are so-called general purpose router, they can be used for glob
 
 \subsection{Basic Routing Algorithms}
 \subsubsection{Maze Router}
-Another often used name for algorithm is Lee's algorithm. But whatever the name is, it is based on a grid, where the obstacles and pins can be filled in. Basically, this is the entire information, which is necessary for the router. Afterwards, a wave of numbers is started from one pin and if this wave reaches the target a possible routing is found \nref{fig:maze_router}. The router guarantees the shortest possible route and will find a solution in all cases, if it is possible \cite[p. 693]{kaufmann:electronic_design_automation}. All in all, this is a very simple approach, but it has several drawbacks. First of all, it is quite slow and very memory-consuming \cite[p. 693]{kaufmann:electronic_design_automation}, as a big matrix might be necessary. This memory-consumption also heavily relies on the grid size, which raises the next question: How fine should the grid be? Those are problems which can be solved. So, for example to attack the problem with the performance it is possible to transform the algorithm into the A*-Algorithm, which is actually just a modified maze router that prefers the shorter directions to the target. Also, for the other problems there are solutions which are mainly part of the more sophisticated routing algorithms.
+Another often used name for algorithm is Lee's algorithm. But whatever the name is, it is based on a grid, where the obstacles and pins can be filled in. Basically, this is the entire information, which is necessary for the router. Afterwards, a wave of numbers is started from one pin and if this wave reaches the target a possible routing is found \figref{fig:maze_router}. The router guarantees the shortest possible route and will find a solution in all cases, if it is possible \cite[p. 693]{kaufmann:electronic_design_automation}. All in all, this is a very simple approach, but it has several drawbacks. First of all, it is quite slow and very memory-consuming \cite[p. 693]{kaufmann:electronic_design_automation}, as a big matrix might be necessary. This memory-consumption also heavily relies on the grid size, which raises the next question: How fine should the grid be? Those are problems which can be solved. So, for example to attack the problem with the performance it is possible to transform the algorithm into the A*-Algorithm, which is actually just a modified maze router that prefers the shorter directions to the target. Also, for the other problems there are solutions which are mainly part of the more sophisticated routing algorithms.
 
 \begin{figure}
 	\centering
@@ -103,7 +103,7 @@ The first decision I had to make was to decide which algorithms should be implem
 \subsubsection{Select a Target}
 The first thing which the algorithm has to do before it can calculate a route is to select the start and target contact area. There can be several possibilities, as every pin can have several contact areas. Later on it will be noticable that already created routes can be candidates to start or end with a route. Basically, this task can be seen as the selection of the closest rectangles of two lists of possibilities. For this I want to talk about how the closest distance between two rectangles can be calculated.
 
-For two rectangles there are several possible constellations. For the first possible position one has to check whether they overlap. If this is the case I can easily calculate the rectangle which is covered by both \nref{fig:rectangles_overlapping} and the distance is 0. As starting points for both rectangles I can select the center of gravity of the overlapping area.
+For two rectangles there are several possible constellations. For the first possible position one has to check whether they overlap. If this is the case I can easily calculate the rectangle which is covered by both \figref{fig:rectangles_overlapping} and the distance is 0. As starting points for both rectangles I can select the center of gravity of the overlapping area.
 
 \begin{figure}
 	\centering
@@ -112,7 +112,7 @@ For two rectangles there are several possible constellations. For the first poss
 	\label{fig:rectangles_overlapping}
 \end{figure}
 
-If the two rectangles do not overlap it becomes more difficult. In this case I can at least say that one of the rectangles has its closest point at one of the edges. Actually, there even can be an endless count of solutions for this problem, but I am only interested in one of them. Because of this I select the solution that is the easiest to calculate, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is one that has the closest euclidean distance to the center of gravity of the second one \nref{fig:rectangles_closest_corner}. As the closest point of the first rectangle is now known, I can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edge is basically a line segment, where the closest point can be calculated easily. For this task I, firstly, need to expand the line segment into a whole line. Secondly, I can then turn this line 90 degrees (it does not matter in which direction as it is a line) and move this new line, so that it crosses the point, from which I want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment, the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
+If the two rectangles do not overlap it becomes more difficult. In this case I can at least say that one of the rectangles has its closest point at one of the edges. Actually, there even can be an endless count of solutions for this problem, but I am only interested in one of them. Because of this I select the solution that is the easiest to calculate, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is one that has the closest euclidean distance to the center of gravity of the second one \figref{fig:rectangles_closest_corner}. As the closest point of the first rectangle is now known, I can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edge is basically a line segment, where the closest point can be calculated easily. For this task I, firstly, need to expand the line segment into a whole line. Secondly, I can then turn this line 90 degrees (it does not matter in which direction as it is a line) and move this new line, so that it crosses the point, from which I want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment, the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
 
 The task of the selection is at this point not finished, because in special cases it is possible that I can now find again a closer point on the first rectangle to the second one. So I have to do the last step once again, for the last time, but with the point of the second rectangle as source.
 
@@ -130,7 +130,7 @@ After the algorithm has selected start and target contact areas the next step is
 
 As the algorithm now has all the necessary information the actual line expansion routing can start. The main idea behind a line expansion router is that the routes are created sequentially. Every single step is based on a map of obstacles, which the route must not cross. Beginning from the starting point I always calculate the next possible point of a route and apply the same algorithm afterwards again to this partial problem. At the beginning of this recursive algorithm, as usual, I check the terminating condition, if I have reached the target point.
 
-In every single step I have to make several decisions: First, I group the possible directions in good and bad directions \nref{fig:router_good_bad_direction}. Good directions are those, which reduce the distance to the target, whereas bad ones are all the others.
+In every single step I have to make several decisions: First, I group the possible directions in good and bad directions \figref{fig:router_good_bad_direction}. Good directions are those, which reduce the distance to the target, whereas bad ones are all the others.
 
 \begin{figure}
 	\centering
@@ -139,7 +139,7 @@ In every single step I have to make several decisions: First, I group the possib
 	\label{fig:router_good_bad_direction}
 \end{figure}
 
-Additionally, it is pointless to go back the same direction from where the last step came from. Also, going the same direction as with last step is not reasonable. The reason therefore is that if this would be a good decision, the last step could have gone further. So I remove these two directions from the good directions. After this selection I can make one step further in every good direction, as far as possible. This means that the next step can go as far as no obstacle is in the way or the target (in this coordinate) is reached \nref{fig:router_go_as_far_as_possible}.
+Additionally, it is pointless to go back the same direction from where the last step came from. Also, going the same direction as with last step is not reasonable. The reason therefore is that if this would be a good decision, the last step could have gone further. So I remove these two directions from the good directions. After this selection I can make one step further in every good direction, as far as possible. This means that the next step can go as far as no obstacle is in the way or the target (in this coordinate) is reached \figref{fig:router_go_as_far_as_possible}.
 
 \begin{figure}
 	\centering
@@ -149,7 +149,7 @@ Additionally, it is pointless to go back the same direction from where the last 
 	\label{fig:router_go_as_far_as_possible}
 \end{figure}
 
-During the calculation of the steps towards the target I count those, which are feasible. If none of them is feasible I will have to select one of the bad directions for the next step. A major premise for this is also that the last step ended at an obstacle. The router now can go as far as necessary into this bad direction \nref{fig:router_as_far_as_necessary}.
+During the calculation of the steps towards the target I count those, which are feasible. If none of them is feasible I will have to select one of the bad directions for the next step. A major premise for this is also that the last step ended at an obstacle. The router now can go as far as necessary into this bad direction \figref{fig:router_as_far_as_necessary}.
 
 \begin{figure}
 	\centering
@@ -158,7 +158,7 @@ During the calculation of the steps towards the target I count those, which are 
 	\label{fig:router_as_far_as_necessary}
 \end{figure}
 
-Sometimes it is also necessary to go above an obstacle, which is on a layer below or above it. This step is also one into a bad direction, because if it would be a good direction it would be done automatically. As it is a bad direction it should only go as far as necessary \nref{fig:router_as_far_as_necessary_above}. The same direction of the obstacle may not be possible as on the current layer only vertical or horizontal routes are allowed.
+Sometimes it is also necessary to go above an obstacle, which is on a layer below or above it. This step is also one into a bad direction, because if it would be a good direction it would be done automatically. As it is a bad direction it should only go as far as necessary \figref{fig:router_as_far_as_necessary_above}. The same direction of the obstacle may not be possible as on the current layer only vertical or horizontal routes are allowed.
 
 \begin{figure}
 	\centering
@@ -177,9 +177,9 @@ To avoid collisions I take the preferred directions for every layer into account
 \subsubsection{Symmetric Routes}
 In manually created layouts an usual way to route symmetric elements is to create them optically symmetric. This optical symmetry gives the designer an easy way to create symmetry. But the really important part about routing symmetries is to match the parasitics. The resistance of the route is for sure matched for the symmetric routes through an optical symmetry, but the capacitive couplings are obeyed in most cases. Therefore, I concentrated on the resistance. To also consider the capacities it would have been necessary to create all routes at the same time. Only with such an approach I can evaluate the capacitive parasitics, otherwise I would have never known what influence routes that were created afterwards will have. As I have chosen to create the routes one by one I cannot consider the capacities for the symmetries.
 
-But before I go more into detail of the routing itself I want to further explain the situation. Symmetries are caused by symmetry constraints, which can have, as already described earlier \nref{subsec:symmetry_constraint}, single and pair modules. Single modules are quite useless for a symmetric routing. The only modules of interest are pair modules, no matter if they only must be connected together or also to another module.
+But before I go more into detail of the routing itself I want to further explain the situation. Symmetries are caused by symmetry constraints, which can have, as already described earlier \secref{subsec:symmetry_constraint}, single and pair modules. Single modules are quite useless for a symmetric routing. The only modules of interest are pair modules, no matter if they only must be connected together or also to another module.
 
-In the routing I first extract all modules, which are symmetric and where both parts of the symmetry pair must be connected to the same net. Afterwards, I connect these pairs together and the only possible starting or ending point for other routes is then the middle of the route between the pair \nref{fig:symmetric_routing}. In this case the middle does not have to be the same distance to both sides but the same resistance to both modules. Therefore, if the route uses different layers from the modules to the middle, it is possible that the middle in terms of resistance can be different to the middle in terms of distance.
+In the routing I first extract all modules, which are symmetric and where both parts of the symmetry pair must be connected to the same net. Afterwards, I connect these pairs together and the only possible starting or ending point for other routes is then the middle of the route between the pair \figref{fig:symmetric_routing}. In this case the middle does not have to be the same distance to both sides but the same resistance to both modules. Therefore, if the route uses different layers from the modules to the middle, it is possible that the middle in terms of resistance can be different to the middle in terms of distance.
 
 \begin{figure}
 	\centering
@@ -189,7 +189,7 @@ In the routing I first extract all modules, which are symmetric and where both p
 \end{figure}
 
 \subsubsection{Guard Rings}
-With guards \nref{fig:guard_ring} a designer can protect, for example, a certain signal from another very noisy one or protect whole module groups. The latter is often used for current mirrors, as they are very sensitive to noise. In physical representation a guard or guard ring is only a layer, for instance MET1, contacted to the substrate and connected to a certain Voltage level (often ground). For the routing this only results in an additional obstacle on this layer.
+With guards \figref{fig:guard_ring} a designer can protect, for example, a certain signal from another very noisy one or protect whole module groups. The latter is often used for current mirrors, as they are very sensitive to noise. In physical representation a guard or guard ring is only a layer, for instance MET1, contacted to the substrate and connected to a certain Voltage level (often ground). For the routing this only results in an additional obstacle on this layer.
 
 \begin{figure}
 	\centering
@@ -201,7 +201,7 @@ With guards \nref{fig:guard_ring} a designer can protect, for example, a certain
 The major difference of guard rings to usual obstacles is that they are obstacles only for certain nets. If you look at it the other way round, a guard ring is not an obstacle for the nets inside. This is necessary so that other routes do not use the space inside a guard ring, but the pins inside can still be connected. For example, a MET1-guard will result in a normal obstacle for all nets on MET1. On all other routing layers there also will be obstacles, but only for nets which do not have pins inside the guard ring.
 
 \subsubsection{Multi-Pin Nets}
-To solve the problem of multi-pin nets it would be possible to use a Steiner-tree \nref{subsec:steiner_routing}, but this approach would not be the easiest one to implement. That is why I have chosen a different solution. Basically, I connect the first two pins at the beginning, where the order of the pins is random (actually they are sorted alphabetically by their name, but this was not the intention and therefore does not matter). Afterwards, I transform the whole new connection into additional possible targets. From this now bigger list of possible targets I select the closest one and connect the next pin to it. The result of this step is again transformed into additional targets for the next pin, and so on.
+To solve the problem of multi-pin nets it would be possible to use a Steiner-tree \secref{subsec:steiner_routing}, but this approach would not be the easiest one to implement. That is why I have chosen a different solution. Basically, I connect the first two pins at the beginning, where the order of the pins is random (actually they are sorted alphabetically by their name, but this was not the intention and therefore does not matter). Afterwards, I transform the whole new connection into additional possible targets. From this now bigger list of possible targets I select the closest one and connect the next pin to it. The result of this step is again transformed into additional targets for the next pin, and so on.
 
 \subsubsection{Select a Route}
 Finally, if the starting point is the same as the ending point I have to calculate a feasible and complete route. I add the result to all the possible routes for this necessary connection. From these routes the first, quite simple algorithm chooses only the best one. As this algorithm calculates the routes sequentially it has no information on, for example, capacitive couplings. Therefore, the \emph{best} possibility is chosen on the lowest resistance.
@@ -223,7 +223,7 @@ This is the point where the line expansion feasibility router comes into play. T
 \subsection{Extended Line Expansion Router}
 This extended version of the line expansion router is based on the simple version. So it is again a sequential approach with the same drawbacks and advantages as the previous versions. The main difference to it is how I select the routes. I actually create the routes in the same way as for the previous version. To improve the performance I make a pre-selection based on the resistance, which can be done easily, as the routes are already sorted by there resistance. For all the routes, which are then left, I calculate the total edge and area capacity that would turn out if this route is added to the connections of the previously routed nets. I then combine these values together to the parasitic sum
 \[p = w_R \cdot R + w_{C_a} \cdot C_a + w_{C_e} \cdot C_e\]
-(where $w_i$ are the weights and $R$, $C_a$ and $C_e$ are the parasitics as defined in \nref{sec:electrical_rules}) on which the actual selection is based.
+(where $w_i$ are the weights and $R$, $C_a$ and $C_e$ are the parasitics as defined in \secref{sec:electrical_rules}) on which the actual selection is based.
 
 \begin{figure}
 	\centering
