--- a/thesis.tex
+++ b/thesis.tex
@@ -32,7 +32,9 @@
 %  type setting correction for binding = 5mm
 \KOMAoptions{BCOR=5mm}
 
-\newcommand{\nref}[1]{{[\ref{#1}]}}
+\newcommand{\figref}[1]{{(Figure \ref{#1})}}
+\newcommand{\secref}[1]{{(Section \ref{#1})}}
+\newcommand{\neweqref}[1]{{(Equation \ref{#1})}}
 \definecolor{maroon}{rgb}{.5,0,0}
 \definecolor{darkgreen}{rgb}{0,.5,0}
 
