--- a/results.tex
+++ b/results.tex
@@ -1,11 +1,11 @@
 \chapter{Results}
-As only the basic line expansion router and the extended version produce really useful results I will explain only results for these two. For the first version \nref{fig:miller_amplifier_routed_line_expansion_router} it is quite easy to determine if the result is reasonable, as it choses always the shortest connection (or better said: the one with the smallest resistance). The two presented layouts have a relatively big minimal distance between all modules set, which causes the actually too big layout. This was necessary, as it is not yet supported by the GUI of the ICFBInterface to specify minimum distances between only some modules. Therefore, I had to choose a big minimum distance between all modules, although I needed only a bigger distance inside the common centroid.
+As only the basic line expansion router and the extended version produce really useful results I will explain only results for these two. For the first version \figref{fig:miller_amplifier_routed_line_expansion_router} it is quite easy to determine if the result is reasonable, as it choses always the shortest connection (or better said: the one with the smallest resistance). The two presented layouts have a relatively big minimal distance between all modules set, which causes the actually too big layout. This was necessary, as it is not yet supported by the GUI of the ICFBInterface to specify minimum distances between only some modules. Therefore, I had to choose a big minimum distance between all modules, although I needed only a bigger distance inside the common centroid.
 
-For the second one, the extend line expansion router, it becomes a lot more difficult to determine manually if there are errors in the layout \nref{fig:miller_amplifier_routed_line_expansion_router}. This router decides which connection should be used also based on the capacitive couplings, therefore it mustn't be always the shortest one.
+For the second one, the extend line expansion router, it becomes a lot more difficult to determine manually if there are errors in the layout \figref{fig:miller_amplifier_routed_line_expansion_router}. This router decides which connection should be used also based on the capacitive couplings, therefore it mustn't be always the shortest one.
 
-To proof if the Plantage produces better results for circuits without common centroids I have created two layouts, one with the basic line expansion router and one with the extended version. As it can be seen a far smaller distance between the modules is necessary. \nref{fig:miller_amplifier_smaller_routed_line_expansion_router}.
+To proof if the Plantage produces better results for circuits without common centroids I have created two layouts, one with the basic line expansion router and one with the extended version. As it can be seen a far smaller distance between the modules is necessary. \figref{fig:miller_amplifier_smaller_routed_line_expansion_router}.
 
-To show also the results of a layout with a symmetry I have prepared one simple example which contains only three modules \nref{fig:symmetry_routed}. Two of them form a pair of a symmetry and the other one is a single module in this symmetry. In the layout can be seen that the two connections between the symmetric modules are connected nearly symmetric the third module. The maximum allowed difference in resistance is 5\%, which seems to be hold by both connections. One of them is optical quite unsymmetric connected, but it starts on both ends on POLY. Therefore, the resistance of the whole connection is dominated by those two small parts.
+To show also the results of a layout with a symmetry I have prepared one simple example which contains only three modules \figref{fig:symmetry_routed}. Two of them form a pair of a symmetry and the other one is a single module in this symmetry. In the layout can be seen that the two connections between the symmetric modules are connected nearly symmetric the third module. The maximum allowed difference in resistance is 5\%, which seems to be hold by both connections. One of them is optical quite unsymmetric connected, but it starts on both ends on POLY. Therefore, the resistance of the whole connection is dominated by those two small parts.
 
 \section{Conclusion}
 
